# exxonmobile

./: .gitignore  README.md  dj_local_conf.json  environment.yml  pyproject.toml
files/: 7b12da4f-7664-433c-9a34-4306c35f1aab_removed.pdf.json
notebooks/: boxing.py  dataloader.ipynb  easy_ocr.ipynb  image_modifiers_notebook2.ipynb  notebook1.ipynb  notebook2.ipynb
pipeline/: Demo 5-24.ipynb  Form Recognizer .ipynb  Form Recognizer 2.ipynb  PDFloader.py  aws_textract.py  azure_computer_vision.py  boxing.py  database.ipynb  dataloader.py  dataloader_archived.py  dataloader_aws.py  dataloader_azure.py  demo_notebook.ipynb  easy_ocr.ipynb  form_recognizer.py  form_recognizer2.py  form_recognizer3.py  form_recognizer4.py  form_recognizer5.py  gui.py  gui2.py  gui3.py  metadata.py  table_classes.py  table_classes2.py  table_classes_archived.py
tests/: test_dataloader.py  test_form_recognizer.py  test_pdfloader.py
