[tool.poetry]
name = "exxonmobile"
version = "0.1.0"
description = ""
authors = ["davidgodinez <davidgodinez70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
pdf2image = "^1.16.3"
datajoint = "0.14.0"
pymupdf = "^1.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
