[tool.poetry]
name = "exxonmobile"
version = "0.1.0"
description = ""
authors = ["davidgodinez <davidgodinez70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
datajoint = "0.14.0"
pytesseract = "^0.3.10"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
pymupdf = "^1.21.1"
easyocr = "^1.6.2"
pytest = "^7.3.0"
azure-cognitiveservices-vision-computervision = "^0.9.0"
pypdf4 = "^1.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
